# hubwise-py-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-03-phase1-foundation.md  2026-07-06-phase2-cw-sites-to-hudu.md  2026-07-06-phase3-pure-api-syncs.md  2026-07-08-phase4-nsm-syncs.md
src/hubwise_py_core/: __init__.py  config.py  cw_automate.py  cw_manage.py  github_app.py  guards.py  http.py  hudu.py  logging.py  msp360.py  mysonicwall.py  nsm.py  otx.py  state.py  teams.py  timezest.py
tests/: test_config.py  test_cw_automate.py  test_cw_manage.py  test_github_app.py  test_guards.py  test_http.py  test_hudu.py  test_logging.py  test_msp360.py  test_mysonicwall.py  test_nsm.py  test_otx.py  test_state.py  test_teams.py  test_timezest.py
